[gd_scene load_steps=63 format=2]

[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/panda.res" type="SpriteFrames" id=1]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/PandaIntro.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Enemies/EnemyShield.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/Damage.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/BossAI.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Bosses/BossStun.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=8]
[ext_resource path="res://src/Sounds/MMX - Enemy Helmet Hit.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/Actors/Enemies/Shared/LongBossDeath.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Effects/Materials/BossExplosion.tres" type="Material" id=11]
[ext_resource path="res://src/Effects/Materials/BossSmokeParticlesMedium.tres" type="Material" id=12]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/PandaBarriers.gd" type="Script" id=13]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/PandaGrenades.gd" type="Script" id=14]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/PandaDash.gd" type="Script" id=15]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/BambooMissiles.gd" type="Script" id=16]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/dps_hud.gd" type="Script" id=17]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Idle.gd" type="Script" id=18]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/BambooSlash.gd" type="Script" id=19]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/BambooGrenade.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/Bamboo.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=22]
[ext_resource path="res://src/Sounds/BlastLaunch - Fire.ogg" type="AudioStream" id=23]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/Slash.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/Sounds/Mantis - DarkSlash.ogg" type="AudioStream" id=25]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=26]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/BambooMissile.tscn" type="PackedScene" id=27]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=28]
[ext_resource path="res://src/Sounds/60 - MMX - Enemy Missile Fire.wav" type="AudioStream" id=29]
[ext_resource path="res://src/Sounds/Drone - Rotate.ogg" type="AudioStream" id=30]
[ext_resource path="res://src/Sounds/Mantis - Desperation.ogg" type="AudioStream" id=31]
[ext_resource path="res://src/Effects/Textures/explosion.png" type="Texture" id=32]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/BambooDeath.gd" type="Script" id=33]
[ext_resource path="res://src/Effects/Materials/RemainsParticle.tres" type="Material" id=34]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/bamboo.res" type="SpriteFrames" id=35]
[ext_resource path="res://src/Effects/Textures/remains_green.png" type="Texture" id=36]
[ext_resource path="res://src/DialogSystem/Dialogs/Stages/Panda_Dialogue.tres" type="Resource" id=37]
[ext_resource path="res://src/Sounds/Panda - Claw Appear.ogg" type="AudioStream" id=38]
[ext_resource path="res://src/Sounds/Panda - Claw Retreat.ogg" type="AudioStream" id=39]
[ext_resource path="res://src/Sounds/Panda - Dash.ogg" type="AudioStream" id=40]
[ext_resource path="res://src/Sounds/Panda - Ground Claws.ogg" type="AudioStream" id=41]
[ext_resource path="res://src/Sounds/Panda - Drill Start.ogg" type="AudioStream" id=42]
[ext_resource path="res://src/Sounds/Panda - Drill Remove.ogg" type="AudioStream" id=43]
[ext_resource path="res://src/Sounds/Panda - Drill Ground.ogg" type="AudioStream" id=44]
[ext_resource path="res://src/Actors/actual_center.gd" type="Script" id=45]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/PandaAchievementHandler.gd" type="Script" id=46]
[ext_resource path="res://src/AchievementSystem/Achievements/PANDABUSTERONLY.tres" type="Resource" id=47]
[ext_resource path="res://src/AchievementSystem/Achievements/PANDANODAMAGE.tres" type="Resource" id=48]
[ext_resource path="res://src/AchievementSystem/Achievements/PANDANAKED.tres" type="Resource" id=49]

[sub_resource type="RectangleShape2D" id=68]
extents = Vector2( 24, 38 )

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 8, 8 )

[sub_resource type="CanvasItemMaterial" id=13]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="Curve" id=238]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=239]
curve = SubResource( 238 )

[sub_resource type="ParticlesMaterial" id=240]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 16, 80, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 239 )

[sub_resource type="CanvasItemMaterial" id=12]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=64]
extents = Vector2( 14, 40.5 )

[sub_resource type="RectangleShape2D" id=241]
extents = Vector2( 20, 33 )

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 24.125, 17.6875 )

[sub_resource type="Curve" id=70]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=43]
curve = SubResource( 70 )

[sub_resource type="ParticlesMaterial" id=71]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 43 )

[node name="Panda" type="KinematicBody2D" groups=["Bosses", "Enemies"]]
z_index = 3
collision_layer = 8
collision_mask = 257
script = ExtResource( 4 )
max_health = 160.0

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}
time_between_attacks = Vector2( 0.25, 0.75 )
order_size = 48

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 37 )
z_index = 8
z_as_relative = false
shape = SubResource( 68 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 26 )
position = Vector2( 0, 30 )
z_index = 1
frames = ExtResource( 1 )
animation = "appear"
flip_h = true

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 1, 15 )
shape = SubResource( 63 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 2 )
actions = [ "Event" ]
animation = "appear"
dialogue = ExtResource( 37 )
slash = ExtResource( 24 )

[node name="Bamboo" type="Node2D" parent="Intro"]
visible = false
position = Vector2( -42, 77 )
z_index = 6

[node name="start" type="AnimatedSprite" parent="Intro/Bamboo"]
position = Vector2( 0, -29 )
frames = ExtResource( 35 )
animation = "base_end"
frame = 13

[node name="body1" type="AnimatedSprite" parent="Intro/Bamboo"]
position = Vector2( 0, -64 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="body2" type="AnimatedSprite" parent="Intro/Bamboo"]
position = Vector2( 0, -128 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="body3" type="AnimatedSprite" parent="Intro/Bamboo"]
position = Vector2( 0, -192 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="BambooDeath" type="Node2D" parent="Intro/Bamboo"]
position = Vector2( 0, -29 )
script = ExtResource( 33 )

[node name="explosion" type="Particles2D" parent="Intro/Bamboo/BambooDeath"]
material = SubResource( 13 )
position = Vector2( 0, -65 )
z_index = 2
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 0.9
local_coords = false
process_material = SubResource( 240 )
texture = ExtResource( 32 )

[node name="remains" type="Particles2D" parent="Intro/Bamboo/BambooDeath"]
material = SubResource( 12 )
position = Vector2( 0, -57 )
z_index = -1
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 34 )
texture = ExtResource( 36 )

[node name="Bamboo2" type="Node2D" parent="Intro"]
visible = false
position = Vector2( -15, 77 )
z_index = 6

[node name="start" type="AnimatedSprite" parent="Intro/Bamboo2"]
position = Vector2( 0, -29 )
frames = ExtResource( 35 )
animation = "base_end"
frame = 13

[node name="body1" type="AnimatedSprite" parent="Intro/Bamboo2"]
position = Vector2( 0, -64 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="body2" type="AnimatedSprite" parent="Intro/Bamboo2"]
position = Vector2( 0, -128 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="body3" type="AnimatedSprite" parent="Intro/Bamboo2"]
position = Vector2( 0, -192 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="BambooDeath" type="Node2D" parent="Intro/Bamboo2"]
position = Vector2( 0, -29 )
script = ExtResource( 33 )

[node name="explosion" type="Particles2D" parent="Intro/Bamboo2/BambooDeath"]
material = SubResource( 13 )
position = Vector2( 0, -65 )
z_index = 2
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 0.9
local_coords = false
process_material = SubResource( 240 )
texture = ExtResource( 32 )

[node name="remains" type="Particles2D" parent="Intro/Bamboo2/BambooDeath"]
material = SubResource( 12 )
position = Vector2( 0, -57 )
z_index = -1
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 34 )
texture = ExtResource( 36 )

[node name="Bamboo3" type="Node2D" parent="Intro"]
visible = false
position = Vector2( 12, 77 )
z_index = 6

[node name="start" type="AnimatedSprite" parent="Intro/Bamboo3"]
position = Vector2( 0, -29 )
frames = ExtResource( 35 )
animation = "base_end"
frame = 13

[node name="body1" type="AnimatedSprite" parent="Intro/Bamboo3"]
position = Vector2( 0, -64 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="body2" type="AnimatedSprite" parent="Intro/Bamboo3"]
position = Vector2( 0, -128 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="body3" type="AnimatedSprite" parent="Intro/Bamboo3"]
position = Vector2( 0, -192 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="BambooDeath" type="Node2D" parent="Intro/Bamboo3"]
position = Vector2( 0, -29 )
script = ExtResource( 33 )

[node name="explosion" type="Particles2D" parent="Intro/Bamboo3/BambooDeath"]
material = SubResource( 13 )
position = Vector2( 0, -65 )
z_index = 2
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 0.9
local_coords = false
process_material = SubResource( 240 )
texture = ExtResource( 32 )

[node name="remains" type="Particles2D" parent="Intro/Bamboo3/BambooDeath"]
material = SubResource( 12 )
position = Vector2( 0, -57 )
z_index = -1
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 34 )
texture = ExtResource( 36 )

[node name="Bamboo4" type="Node2D" parent="Intro"]
visible = false
position = Vector2( 39, 77 )
z_index = 6

[node name="start" type="AnimatedSprite" parent="Intro/Bamboo4"]
position = Vector2( 0, -29 )
frames = ExtResource( 35 )
animation = "base_end"
frame = 13

[node name="body1" type="AnimatedSprite" parent="Intro/Bamboo4"]
position = Vector2( 0, -64 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="body2" type="AnimatedSprite" parent="Intro/Bamboo4"]
position = Vector2( 0, -128 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="body3" type="AnimatedSprite" parent="Intro/Bamboo4"]
position = Vector2( 0, -192 )
frames = ExtResource( 35 )
animation = "end"
frame = 13

[node name="BambooDeath" type="Node2D" parent="Intro/Bamboo4"]
position = Vector2( 0, -29 )
script = ExtResource( 33 )

[node name="explosion" type="Particles2D" parent="Intro/Bamboo4/BambooDeath"]
material = SubResource( 13 )
position = Vector2( 0, -65 )
z_index = 2
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 0.9
local_coords = false
process_material = SubResource( 240 )
texture = ExtResource( 32 )

[node name="remains" type="Particles2D" parent="Intro/Bamboo4/BambooDeath"]
material = SubResource( 12 )
position = Vector2( 0, -57 )
z_index = -1
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 34 )
texture = ExtResource( 36 )

[node name="alert" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 30 )
volume_db = -9.42
pitch_scale = 0.5
max_distance = 600.0
bus = "SFX"

[node name="pandaslash" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 25 )
volume_db = 1.5
pitch_scale = 1.27
max_distance = 600.0
bus = "SFX"

[node name="claw_appear" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 38 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"

[node name="claw_retreat" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 39 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 18 )
conflicting_moves = [ "Anything" ]
animation = "idle"

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 5 )
invulnerability_time = 0.1
ignore_nearby_hits = false
max_flash_time = 0.35
weakenesses = [ "FireDash", "RideArmor", "FlameBurner", "Enkoujin" ]

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 28 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="dps" type="RichTextLabel" parent="Damage"]
visible = false
margin_left = -18.0
margin_top = -69.0
margin_right = 59.0
margin_bottom = -52.0
text = "0.0"
script = ExtResource( 17 )

[node name="area2D" type="Area2D" parent="Damage"]
position = Vector2( 0, -9 )
z_index = 6
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="Damage/area2D"]
position = Vector2( 1, 32.5 )
shape = SubResource( 64 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 8 )
damage = 6.0

[node name="area2D" type="Area2D" parent="DamageOnTouch"]
modulate = Color( 0.313726, 1, 0, 1 )
z_index = 2
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="DamageOnTouch/area2D"]
position = Vector2( 0, 32 )
shape = SubResource( 241 )

[node name="BossStun" type="Node2D" parent="."]
script = ExtResource( 7 )
conflicting_moves = [ "BossDeath" ]
actions = [ "Event" ]
animation = "death"
horizontal_velocity = 60.0
jump_velocity = 100.0

[node name="EnemyShield" type="Node2D" parent="."]
position = Vector2( 0, 39 )
z_index = 2
script = ExtResource( 3 )
breakable = false

[node name="hittable_area" type="Area2D" parent="EnemyShield"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="EnemyShield/hittable_area"]
position = Vector2( 0.125, 2.6875 )
shape = SubResource( 69 )

[node name="hitSound" type="AudioStreamPlayer2D" parent="EnemyShield"]
stream = ExtResource( 9 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="BossDeath" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, 8 )
death_animation = "death"
collectible = "panda_weapon"

[node name="Explosion Particles" parent="BossDeath" index="0"]
amount = 24
process_material = ExtResource( 11 )

[node name="Smoke Particles" parent="BossDeath" index="1"]
process_material = ExtResource( 12 )

[node name="Remains" parent="BossDeath" index="4"]
process_material = SubResource( 71 )

[node name="BambooBarriers" type="Node2D" parent="."]
position = Vector2( 0, 75 )
script = ExtResource( 13 )
actions = [ "Event" ]
animation = "drill_prepare"
barrier = ExtResource( 21 )

[node name="start" type="AudioStreamPlayer2D" parent="BambooBarriers"]
stream = ExtResource( 42 )
volume_db = -7.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 22 )

[node name="floor" type="AudioStreamPlayer2D" parent="BambooBarriers"]
stream = ExtResource( 44 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 22 )

[node name="remove" type="AudioStreamPlayer2D" parent="BambooBarriers"]
stream = ExtResource( 43 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 22 )

[node name="BambooGrenades" type="Node2D" parent="."]
script = ExtResource( 14 )
actions = [ "Event" ]
animation = "grenade_prepare"
grenade = ExtResource( 20 )

[node name="claw_appear" type="AudioStreamPlayer2D" parent="BambooGrenades"]
position = Vector2( 0, 75 )
stream = ExtResource( 38 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"

[node name="shot" type="AudioStreamPlayer2D" parent="BambooGrenades"]
stream = ExtResource( 23 )
volume_db = -12.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 22 )

[node name="prepare" type="AudioStreamPlayer2D" parent="BambooGrenades"]
stream = ExtResource( 41 )
volume_db = -2.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 22 )

[node name="BambooDash" type="Node2D" parent="."]
script = ExtResource( 15 )
actions = [ "Event" ]
horizontal_velocity = 420.0

[node name="dash" type="AudioStreamPlayer2D" parent="BambooDash"]
stream = ExtResource( 40 )
max_distance = 600.0
bus = "SFX"
script = ExtResource( 22 )

[node name="BambooMissiles" type="Node2D" parent="."]
position = Vector2( 0, 50 )
script = ExtResource( 16 )
actions = [ "Event" ]
animation = "missile_prepare"
missile = ExtResource( 27 )

[node name="shot" type="AudioStreamPlayer2D" parent="BambooMissiles"]
stream = ExtResource( 29 )
volume_db = -8.0
pitch_scale = 0.96
max_distance = 600.0
bus = "SFX"
script = ExtResource( 22 )

[node name="BambooSlash" type="Node2D" parent="."]
script = ExtResource( 19 )
actions = [ "Event" ]
animation = "rage_prepare"
desperation_attack = true
slash = ExtResource( 24 )

[node name="pandaslash" type="AudioStreamPlayer2D" parent="BambooSlash"]
stream = ExtResource( 25 )
volume_db = 2.0
max_distance = 600.0
bus = "SFX"

[node name="roar" type="AudioStreamPlayer2D" parent="BambooSlash"]
stream = ExtResource( 31 )
volume_db = 4.0
pitch_scale = 0.73
max_distance = 600.0
bus = "SFX"

[node name="alert" type="AudioStreamPlayer2D" parent="BambooSlash"]
stream = ExtResource( 30 )
volume_db = -2.0
max_distance = 600.0
bus = "SFX"

[node name="claw_appear" type="AudioStreamPlayer2D" parent="BambooSlash"]
stream = ExtResource( 38 )
volume_db = 1.5
max_distance = 600.0
bus = "SFX"

[node name="claw_retreat" type="AudioStreamPlayer2D" parent="BambooSlash"]
stream = ExtResource( 39 )
volume_db = 1.5
max_distance = 600.0
bus = "SFX"

[node name="actual_center" type="Node2D" parent="."]
script = ExtResource( 45 )
damage = NodePath("../Damage")

[node name="AchievementHandler" type="Node" parent="."]
script = ExtResource( 46 )
_desperation = NodePath("../BambooSlash")
no_damage = ExtResource( 48 )
buster_only = ExtResource( 47 )
naked = ExtResource( 49 )

[connection signal="dps" from="Damage" to="Damage/dps" method="_on_Damage_dps"]
[connection signal="barriers_created" from="BambooBarriers" to="BambooDash" method="_on_barriers_created"]
[connection signal="ability_end" from="BambooSlash" to="BossStun" method="reactivate"]
[connection signal="ability_start" from="BambooSlash" to="BossStun" method="deactivate"]
[connection signal="slashed" from="BambooSlash" to="BambooBarriers" method="cancel_barriers"]
[connection signal="slashed" from="BambooSlash" to="BambooDash" method="_on_barriers_destroyed"]

[editable path="BossDeath"]
